Updated PoolDBESSource parameters

--- a/CondTools/SiStrip/scripts/template_SiStripCondObjDisplay.cfg
+++ b/CondTools/SiStrip/scripts/template_SiStripCondObjDisplay.cfg
@@ -28,10 +28,10 @@ process TEST = {
 	
 	bool loadAll = true
 	string connect = "insert_DBfile"
-	untracked string catalog = "insert_DBcatalog" 
+	#
 	string timetype = "runnumber" 
 	untracked uint32 messagelevel = 3
-	untracked bool loadBlobStreamer = true
+	untracked string BlobStreamerName="DefaultBlobStreamingService"
 	untracked uint32 authenticationMethod = 1
     }
     
