--- a/CondTools/SiStrip/scripts/template_SiStripO2O.cfg
+++ b/CondTools/SiStrip/scripts/template_SiStripO2O.cfg
@@ -21,9 +21,9 @@ process PEDESTALS = {
     
     block PoolDBBlock     = {
 	string connect = "insert_DBfile"    
-	untracked string catalog = "insert_DBcatalog"
+	#
 	string timetype = "runnumber"    
-	untracked bool loadBlobStreamer = true
+	untracked string BlobStreamerName="DefaultBlobStreamingService"
 	untracked uint32 authenticationMethod = 1
 	untracked uint32 messagelevel = 2 
     }
