--- a/CondTools/SiStrip/scripts/template_SiStripOfflinePedNoiseToDb.cfg
+++ b/CondTools/SiStrip/scripts/template_SiStripOfflinePedNoiseToDb.cfg
@@ -14,9 +14,9 @@ process OFFPEDNOISE = {
     
     block PoolDBBlock     = {
 	string connect = "insert_DBfile"    
-	untracked string catalog = "insert_DBcatalog"
+	#
 	string timetype = "runnumber"    
-	untracked bool loadBlobStreamer = true
+	untracked string BlobStreamerName="DefaultBlobStreamingService"
 	untracked uint32 authenticationMethod = 1
 	untracked uint32 messagelevel = 2 
     }
