correct update of PoolDBESSource parameters

--- a/CondTools/SiStrip/scripts/template_SiStripCondObjDisplay.cfg
+++ b/CondTools/SiStrip/scripts/template_SiStripCondObjDisplay.cfg
@@ -26,13 +26,14 @@ process TEST = {
     es_source = PoolDBESSource { 
 	VPSet toGet = {{ string record = "SiStripPedestalsRcd" string tag = "insert_tagPN_p" }, { string record = "SiStripNoisesRcd" string tag = "insert_tagPN_n" }, { string record = "SiStripFedCablingRcd" string tag = "insert_tagCab" }}
 	
-	bool loadAll = true
 	string connect = "insert_DBfile"
 	#
 	string timetype = "runnumber" 
-	untracked uint32 messagelevel = 3
 	untracked string BlobStreamerName="DefaultBlobStreamingService"
-	untracked uint32 authenticationMethod = 1
+	PSet DBParameters = {
+	    untracked string authenticationPath="/afs/cern.ch/cms/DB/conddb"
+	    untracked int32 messageLevel=2
+	}
     }
     
     
