--- a/CondTools/SiStrip/scripts/template_SiStripO2O.cfg
+++ b/CondTools/SiStrip/scripts/template_SiStripO2O.cfg
@@ -24,8 +24,10 @@ process PEDESTALS = {
 	#
 	string timetype = "runnumber"    
 	untracked string BlobStreamerName="DefaultBlobStreamingService"
-	untracked uint32 authenticationMethod = 1
-	untracked uint32 messagelevel = 2 
+        PSet DBParameters = {
+            untracked string authenticationPath="/afs/cern.ch/cms/DB/conddb"
+            untracked int32 messageLevel=2
+        }
     }
     
     
