--- a/Validation/RecoJets/analysis/template.cfg
+++ b/Validation/RecoJets/analysis/template.cfg
@@ -6,8 +6,13 @@ process VALIDATION = {
   }
 
   module JetAnalyzer = CaloJetTester{
-     InputTag src = SOURCE
-     untracked string outputFile = 'OUTPUT_FILE'
+     InputTag src = CALO_JETS
+     InputTag srcGen = GEN_JETS
+     double genPtThreshold = 1
+     double genEnergyFractionThreshold = 0.05
+     double reverseEnergyFractionThreshold = 0.5
+     double RThreshold = 0.3
+     untracked string outputFile = 'CALO_JETS_validation.root'
   }
   path p = { JetAnalyzer }
 
