Major Upgrade. EDProducer: append comparison results into the event, d|e record.

--- a/L1Trigger/HardwareValidation/hwtest/HcalRctPattTest.cfg
+++ b/L1Trigger/HardwareValidation/hwtest/HcalRctPattTest.cfg
@@ -65,16 +65,16 @@ process HcalRctPattTest = {
 
     # comparator
     module l1compare = L1Comparator {
-      untracked string ETP_dataLabel = ""
-      untracked string ETP_emulLabel = ""
-      untracked string HTP_dataLabel = ""
-      untracked string HTP_emulLabel = ""
-      untracked string RCT_dataLabel = "l1RctHwDigis"
-      untracked string RCT_emulLabel = "l1RctEmulDigis"
-      untracked string GCT_dataLabel = ""
-      untracked string GCT_emulLabel = ""
-      untracked string GT_dataLabel  = ""
-      untracked string GT_emulLabel  = ""
+      untracked string ETPsourceData = ""
+      untracked string ETPsourceEmul = ""
+      untracked string HTPsourceData = ""
+      untracked string HTPsourceEmul = ""
+      untracked string RCTsourceData = "l1RctHwDigis"
+      untracked string RCTsourceEmul = "l1RctEmulDigis"
+      untracked string GCTsourceData = ""
+      untracked string GCTsourceEmul = ""
+      untracked string GLTsourceData  = ""
+      untracked string GLTsourceEmul  = ""
       untracked string DumpFile      = "dump.txt"
       untracked int32  DumpMode      = 0
       untracked vuint32 COMPARE_COLLS= { 0,1,0,0 }
