--- a/L1Trigger/HardwareValidation/hwtest/EcalRctScPattTest.cfg
+++ b/L1Trigger/HardwareValidation/hwtest/EcalRctScPattTest.cfg
@@ -60,12 +60,12 @@ process EcalRctPattTest = {
 
     # comparator
     include "L1Trigger/HardwareValidation/data/L1Comparator.cfi"
-    replace l1Compare.RCT_dataLabel = rctHwDigis
-    replace l1Compare.RCT_emulLabel = rctEmulDigis
-    replace l1Compare.DumpFile      = "dump_comp.txt"
-    replace l1Compare.DumpMode      = 1
-    replace l1Compare.COMPARE_COLLS = { 0,0,1,0,0,0,0,0,0,0,0 }
+    replace l1compare.RCTsourceData = rctHwDigis
+    replace l1compare.RCTsourceEmul = rctEmulDigis
+    replace l1compare.DumpFile      = "dump_comp.txt"
+    replace l1compare.DumpMode      = 1
+    replace l1compare.COMPARE_COLLS = { 0,0,1,0,0,0,0,0,0,0,0 }
     
-    path p = { emul & hw, l1Compare }
+    path p = { emul & hw, l1compare }
 
 }
