Updated to latest changes in working dir

--- a/DQMServices/Diagnostic/scripts/Database/Python/HDQMDatabaseProducerConfiguration_MinimumBias.cfg
+++ b/DQMServices/Diagnostic/scripts/Database/Python/HDQMDatabaseProducerConfiguration_MinimumBias.cfg
@@ -23,10 +23,11 @@ Group = Collisions10
 # Prefix to tag name. Will be composed with subdet and tag version to build the actual tag name
 TagName = HDQM
 
-SubDetsAndTags = SiStrip,  V1, Strip:GOOD;
-		 SiPixel,  V1, Pix:GOOD;
+SubDetsAndTags = SiStrip,  V2, Track:GOOD;
+		 SiPixel,  V3, Track:GOOD;
                  Tracking, V1, Track:GOOD;
-                 RPC,      V1, Rpc:GOOD
+#                 RPC,      V1, Rpc:GOOD;
+                 RPCWeb,   V1, Rpc:GOOD
 
 # Database
 # ########
@@ -42,7 +43,7 @@ BaseDir = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/Cron/Scripts/RunSelection/T
 
 # CMS environment
 CMS_PATH = /afs/cern.ch/cms
-CMSSW_Version = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/CMSSW_Releases/slc5/CMSSW_3_3_6
+CMSSW_Version = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/CMSSW_Releases/slc5/CMSSW_3_8_0
 
 # Directory containing the cfg templates
 TemplatesDir = %(CMSSW_Version)s/src/DQMServices/Diagnostic/scripts/Database/Templates
