--- a/DQMServices/Diagnostic/scripts/Database/Python/HDQMDatabaseProducerConfiguration_StreamExpress.cfg
+++ b/DQMServices/Diagnostic/scripts/Database/Python/HDQMDatabaseProducerConfiguration_StreamExpress.cfg
@@ -26,16 +26,25 @@ Group = Collisions10
 # Prefix to tag name. Will be composed with subdet and tag version to build the actual tag name
 TagName = HDQM
 
-SubDetsAndTags = SiStrip,  V4, Strip:GOOD;
-		 SiPixel,  V2, Pix:GOOD;
+SubDetsAndTags = SiStrip,  V5, Track:GOOD;
+                 SiPixel,  V3, Track:GOOD;
                  Tracking, V2, Track:GOOD;
-                 RPC,      V2, Rpc:GOOD
+#                 RPC,      V2, Rpc:GOOD;
+                 RPCWeb,   V1, Rpc:GOOD
+
+# # For the offline DB
+# SubDetsAndTags = SiStrip,  %(RunType)s_V4, Strip:GOOD;
+#                  SiPixel,  %(RunType)s_V2, Pix:GOOD;
+#                  Tracking, %(RunType)s_V2, Track:GOOD;
+#                  RPC,      %(RunType)s_V2, Rpc:GOOD;
+#                  RPCWeb,   %(RunType)s_V1, Rpc:GOOD
 
 # Database
 # ########
 
 AuthenticationPath = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/Cron/Scripts/Authentication
 Database = sqlite_file:/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/Cron/Scripts/RunSelection/Test/dbfile_%(RunType)s.db
+# Database = oracle://cms_orcoff_prod/CMS_DQM_31X_OFFLINE
 
 # Directories
 # ###########
@@ -45,7 +54,7 @@ BaseDir = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/Cron/Scripts/RunSelection/T
 
 # CMS environment
 CMS_PATH = /afs/cern.ch/cms
-CMSSW_Version = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/CMSSW_Releases/slc5/CMSSW_3_3_6
+CMSSW_Version = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/HDQM/CMSSW_Releases/slc5/CMSSW_3_8_0
 
 # Directory containing the cfg templates
 TemplatesDir = %(CMSSW_Version)s/src/DQMServices/Diagnostic/scripts/Database/Templates
