Change plot range default in MPS validation.

--- a/Alignment/MillePedeAlignmentAlgorithm/templates/mpsvalidate_default.ini
+++ b/Alignment/MillePedeAlignmentAlgorithm/templates/mpsvalidate_default.ini
@@ -27,13 +27,13 @@ rangexyz = 100, 50
 rangerot = 0.00004, 0.00006, 0.00008
 rangedist = 0.003
 samerange = true
-rangemode = given
+rangemode = all
 
 [HIGHLEVELPLOTS]
 rangexyz = 100, 50
 rangerot = 0.00004, 0.00006, 0.00008
 samerange = true
-rangemode = given
+rangemode = all
 
 [TIMEPLOTS]
 firsttree = 1
